[package]
name = "mimosa_computers_luajit"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"]}
mlua = { version = "0.8.6", features = ["luajit", "vendored", "send", "macros"] }
jni = "0.20.0"

[lib]
crate-type=["cdylib"]